2004-06-14 Andrew Niefer
	- Bugs 66799, 66981 : don't process indexer jobs if the indexer for that project is disabled.
	- also fix warnings about deprecated calls and unnecessary else statements

2004-06-13 Bogdan Gheorghe
	Fix for Bug 63275 - Ensured that only declarations and references are found for enumerations/enumerators
	
2004-05-28 Bogdan Gheorghe
    Fix for Bug 63831 - Ability to determine when the index is incomplete
    Provided a way for external clients to query the index state of a project
    
2004-05-28 Bogdan Gheorghe
	Fix for Bug 60946 - [Indexer] indexer should provide notification whenever index changes
	Provide a notification to the listener of index events

	Fix for Bug 44926 - add extensibility to gracefully handle preprocessor exceptions
	Added an IndexProblemHandler to handle parser IProblem callbacks

2004-05-27 Bogdan Gheorghe
	Fix for Bug 58716 - [Refactoring] Subdirectories confuse refactoring
	Added a listener to path change events from the core model; retrigger 
	indexing based on the granularity of the change event
	
2004-05-27 Bogdan Gheorghe
	Fix for Bug 62015 - Indexer to not rely on file extension for translation Unit
	Changed all indexer file type checking to use the CoreModel file resolution services.
	
2004-05-21 Andrew Niefer
	Indexer problem reporting
		* index/org/eclipse/cdt/internal/core/messages.properties
		* index/org/eclipse/cdt/internal/core/search/indexing/IndexManager.java
		* index/org/eclipse/cdt/internal/core/search/indexing/SourceIndexer.java
		* index/org/eclipse/cdt/internal/core/search/indexing/SourceIndexerRequestor.java

2004-05-18 Bogdan Gheorghe
	IndexAllProject - restored the save request.
	
2004-05-18 Bogdan Gheorghe
	First go at putting in source folder indexing. Index All events will index
	source folders (still need to put in includes indexing). DeltaProcessor only
	forwards events for source files so individual indexing doesn't need to be
 	altered. 
 	
2004-05-16 Bogdan Gheorghe